# ray-tracing-in-c

./: CMakeLists.txt  Makefile  Makefile.nix  README.md  aabb.h  aarect.h  box.h  bvh.h  camera.h  constanst_medium.h  hittable.h  hittable_list.h  material.h  moving_sphere.h  perlin.h  random.cc  ray.h  ray_trace.c  ray_trace.h  sphere.h  texture.h  types.h  vec.h
